--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,13 @@
 
 body {
 }
+
+@layer utilities {
+  .icon-container {
+    margin-right: 4px;
+    display: flex;
+    align-items: center;
+    margin: 0 8px;
+    padding-bottom: 18px;
+  }
+}
